<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bminor.officebarkaroake.songRequestActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SR_Header"
        android:id="@+id/textView2"
        android:gravity="center"
        android:textSize="40dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameField"
        android:maxLines="1"
        android:hint="@string/SR_nameField_hint"
        android:layout_marginTop="33dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignEnd="@+id/textView2"
        android:minLines="1"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SR_button_request"
        android:id="@+id/button"
        android:layout_below="@+id/nameField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:onClick="sendMessage"
        android:background="@drawable/bg_background"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/SR_prompt"
        android:id="@+id/textView3"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/textView4"
        android:layout_toEndOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SR_songLabel"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/SR_artistLabel"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="37dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Twilight of the Thundergod"
        android:id="@+id/selectedSong"
        android:textColor="#009e60"
        android:layout_above="@+id/textView5"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textAlignment="textStart"
        android:singleLine="true"
        android:textSize="20dp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_alignTop="@+id/textView4"
        android:layout_toRightOf="@+id/textView5"
        android:paddingStart="10dp"
        android:paddingTop="2dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/selectedArtist"
        android:textColor="#009e60"
        android:layout_alignTop="@+id/textView5"
        android:layout_alignLeft="@+id/selectedSong"
        android:layout_alignStart="@+id/selectedSong"
        android:layout_alignRight="@+id/selectedSong"
        android:layout_alignEnd="@+id/selectedSong"
        android:textAlignment="textStart"
        android:singleLine="true"
        android:textSize="20dp"
        android:paddingStart="10dp"
        android:paddingTop="2dp" />

</RelativeLayout>
